test/Parse/fixed_infinite_loops.code
// RUN: %target-language-frontend -parse -verify %s

fn test1() {
  @s // expected-error {{expected statement}}
  return
}
fn test2() {
  @unknown // expected-error {{expected statement}}
  return
}
